linde-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linde-service
  namespace: linde
spec:
  selector:
    app: linde
  type: ClusterIP
  ports:
    - name: nextjs  #frontend
      port: 3000
      targetPort: 3000
    - name: relay
      port: 3001   #websocket 
      targetPort: 3001
