linde-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linde-ingress
  namespace: linde
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linde-service
                port:
                  number: 3000
          - path: /edge
            pathType: Prefix
            backend:
              service:
                name: linde-service
                port:
                  number: 3001
